--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "sorte";
+    src: url(".//fontes/Luckiest_Guy/LuckiestGuy-Regular.ttf");
+}
+
+
 body {
   background-color: #f5f5f5;
   font-family: Arial, sans-serif;
@@ -13,6 +19,10 @@ nav {
   background-color: #777;
   color: #fff;
   padding: 10px;
+}
+
+h1, h2{
+  font-family: "sorte", sans-serif;
 }
 
 nav ul {
@@ -43,4 +53,27 @@ section {
   max-width: 100%;
   height: auto;
   margin-right: 10px;
+}
+
+.light-blue-background {
+  background-color: #53A1F6; /* Altere para a cor desejada */
+  color: #000; /* Altere a cor do texto, se necessário */
+}
+
+button#backgroundButton {
+  background-color: #ccc;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+button#backgroundButton:hover {
+  background-color: #999;
+}
+
+#imagem {
+  display: none;
+}
+
+#imagem.show {
+  display: block;
 }
