--- a/style.css
+++ b/style.css
@@ -6,12 +6,10 @@
 
 body {
   background-color: #f5f5f5;
-  font-family: Arial, sans-serif;
-  overflow: hidden; 
 }
 
 header {
-  border-radius: 100px 100px 0px 0px;
+  border-radius: 20px 20px 0px 0px;
   background-color: yellow;
   color: #fff;
   padding: 20px;
@@ -23,7 +21,7 @@ header h1{
 }
 
 nav {
-  border-radius: 0px 0px 100px 100px ;
+  border-radius: 0px 0px 20px 20px ;
   background-color: black;
   color: #fff;
   padding: 10px;
@@ -37,6 +35,7 @@ nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  text-align: center;
 }
 
 nav ul li {
@@ -47,10 +46,19 @@ nav ul li {
 nav ul li a {
   color: #fff;
   text-decoration: none;
+  font-weight: bold;
+}
+
+nav ul li a:hover{
+  color: rgb(255, 0, 0);
 }
 
 section {
   padding: 20px;
+}
+
+#texto{
+  font-size: larger;
 }
 
 .slideshow {
@@ -68,27 +76,76 @@ section {
   color: #000; /* Altere a cor do texto, se necessário */
 }
 
-button#backgroundButton {
-  background-color: #ccc;
+#backgroundButton {
+  background-color: yellow;
   padding: 5px 10px;
+  cursor:help;
+  width: 120px;
+  height: 40px;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 4px;
+  font-weight: bold;
+}
+
+#backgroundButton:hover {
+  background-color: rgb(255, 113, 113);
+}
+
+#formulario{
+  background-color: yellow;
+  border: 5px solid red;
+  width: 800px;
+  height: 500px;
+  padding: 5px;
+  border-radius: 10px;
+  position: relative;
+  left: 24.5%;
+}
+
+#formulario h1{
+  text-align: center;
+}
+
+#formulario p{
+  text-align: center;
+  position: relative;
+  top: 5%;
+  font-size: larger;
+  color: black;
+  padding: 10px;
+  font-family: "sorte";
+    src: url(".//fontes/Luckiest_Guy/LuckiestGuy-Regular.ttf");
+}
+
+#formulario p input{
+  display: flex;
+  position: relative;
+  left: 24%;
+  width: 400px;
+  height: 40px;
+  text-align: center;
+  border: red solid 2px;
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+#enviar{
+  background-color: red;
+  border: none;
+  padding: 4px;
+  width: 140px;
+  height: 60px;
+  color: whitesmoke;
+  border-radius: 5px;
+  position: relative;
+  left: 41%;
+  top: 4%;
+  font-family: "sorte";
+    src: url(".//fontes/Luckiest_Guy/LuckiestGuy-Regular.ttf");
+    font-size: larger;
+}
+
+#enviar:hover{
+  background-color: rgb(255, 66, 66);
   cursor: pointer;
 }
-
-button#backgroundButton:hover {
-  background-color: #999;
-}
-
-#imagem {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 9999;
-}
-
-#imagem img {
-  height: 1000px;
-  width: 1000px;
-  max-width: 100%;
-  max-height: 100%;
