--- a/style.css
+++ b/style.css
@@ -61,11 +61,7 @@ section {
   font-size: larger;
 }
 
-.slideshow {
-  display: flex;
-}
-
-.slideshow img{
+#slideshow img{
   max-width: 100%;
   height: 350px;
   margin-right: 10px;
@@ -99,7 +95,7 @@ section {
   padding: 5px;
   border-radius: 10px;
   position: relative;
-  left: 24.5%;
+  left: 32%;
 }
 
 #formulario h1{
@@ -155,7 +151,30 @@ p{
 
 }
 
+.product-container{
+  padding: 20px;
+}
+
+.product-card{
+  border: black solid 2px;
+  background-color: gray;
+  width: 300px;
+  height: 400px;
+  padding: 10px;
+}
+
 .product-card img{
-  height: 350px;
-  width: 350px;
+  width: 200px;
+  height: 200px;
+}
+
+.quiz{
+  position: relative;
+  left: 28%;
+  background-color: yellow;
+  width: 900px;
+  padding: 20px;
+  border: red solid 4px;
+  border-radius: 10px;
+  text-align: center;
 }
